<resources>
    <string name="app_name">Berim Basket</string>
    <string name="activity_home_navigation_profile">Profile</string>
    <string name="activity_home_navigation_map">Map</string>
    <string name="activity_home_get_answer_dialog_title">Your today Question!</string>
    <string name="activity_home_get_answer_dialog_btn_yes">Send</string>
    <string name="activity_home_get_answer_dialog_btn_no">Cancel</string>
    <string name="activity_home_send_answer_prompt_successful">Your message has been sent successfully</string>
    <string name="activity_home_navigation_showcase">Application main screens:\nHome screen\nStadiums location on map\n
    User profile\n**Touch below area to start**</string>
    <string name="activity_home_showcase_btn_settings_title">Settings</string>
    <string name="activity_home_showcase_btn_settings_description">Default city, Language, Update, Support, &#8230;</string>
    <string name="activity_home_showcase_btn_notification_title">Notifications</string>
    <string name="activity_home_showcase_btn_notification_description">Notifications, events and messages history </string>
    <string name="activity_home_navigation_matches">Matches</string>
    <string name="activity_home_navigation_players">Players</string>
    <string name="activity_home_navigation_stadiums">Stadiums</string>
    <string name="activity_login_edt_password_hint">Password</string>
    <string name="activity_login_btn_sign_in">Login</string>
    <string name="activity_login_btn_sign_up_telegram">Sign up using Telegram</string>
    <string name="activity_login_btn_sign_up_email">Sign up using Email</string>
    <string name="activity_login_toast_fill_all_fields">Please fill all fields</string>
    <string name="activity_login_toast_successful">Login successful</string>
    <string name="activity_login_edt_username_error">Wrong username or password</string>
    <string name="activity_login_txt_create_account">Don\'t have an account? make one!!!</string>
    <string name="activity_login_txt_watch_video">How to create account? take a look at this</string>
    <string name="activity_login_txt_forget_password">Forget Password?</string>
    <string name="activity_login_edt_username_hint">Username</string>
    <string name="activity_register_btn_sign_up">Register</string>
    <string name="activity_register_toast_wrong_password">Wrong Password</string>
    <string name="activity_register_edt_username_error">Username already taken</string>
    <string name="activity_register_toast_register_successful">Registration successful, now you can login</string>
    <string name="activity_register_txt_have_account">Already have an account? then login!</string>
    <string name="activity_register_toast_fill_all_fields">Please fill all fields</string>
    <string name="activity_register_edt_verify_error">Wrong or expired code</string>
    <string name="activity_register_edt_verify_code_hint">Verification Code</string>
    <string name="activity_register_edt_user_name_hint">Username</string>
    <string name="activity_register_edt_repeat_pass_hint">Repeat Password</string>
    <string name="activity_player_spec_name">Name</string>
    <string name="activity_player_spec_city">City</string>
    <string name="activity_player_spec_height">Height</string>
    <string name="activity_player_spec_weight">Weight</string>
    <string name="activity_player_spec_address">Address</string>
    <string name="activity_player_spec_experience">Experience</string>
    <string name="activity_player_spec_head_coach">Coach</string>
    <string name="activity_player_spec_team">Team</string>
    <string name="activity_player_spec_user_name">Username</string>
    <string name="activity_player_spec_game_post">Game Post</string>
    <string name="activity_player_spec_separator" translatable="false">:</string>
    <string name="activity_player_spec_telegram">Telegram</string>
    <string name="activity_player_spec_instagram">Instagram</string>
    <string name="activity_player_spec_phone_number">Phone Number</string>
    <string name="activity_player_spec_age">Age</string>
    <string name="activity_player_default_name">Jordan Burroughs</string>
    <string name="activity_player_txt_player_name_loading">Loading Player</string>
    <string name="activity_set_marker_toast_stadium_name_error">Please enter stadium name</string>
    <string name="activity_set_marker_toast_marker_successful">You\'r location successfully submitted</string>
    <string name="activity_stadium_txt_name_default">Shahid Avini stadium</string>
    <string name="activity_stadium_txt_address_default">Address: Azadi sport complex, 5 kilometer after Tehran-Karaj blvd, Tehran, Iran</string>
    <string name="activity_stadium_txt_round_default">Work time: 8 am - 10 pm</string>
    <string name="activity_stadium_txt_telegram_channel_default">Telegram channel: @berimbasket</string>
    <string name="activity_stadium_txt_instagram_default">Instagram: @berimbasket</string>
    <string name="activity_stadium_txt_root_default">Roof: +</string>
    <string name="activity_stadium_txt_distance_2_parking_default">Distance to parking: 500 meter</string>
    <string name="activity_stadium_txt_rim_height">Rim Height: 3 meter</string>
    <string name="activity_stadium_txt_rim_number_default">Rim Number: 2</string>
    <string name="activity_stadium_btn_complete_detail">Complete Info</string>
    <string name="activity_stadium_txt_lines_default">Lines: +</string>
    <string name="activity_stadium_txt_stadium_name_loading">Loading Stadium</string>
    <string name="activity_stadium_btn_more_pics">more pictures</string>
    <string name="activity_stadium_fab_action_reserve">Reserve</string>
    <string name="activity_stadium_fab_action_add_photo">Add Photo</string>
    <string name="activity_stadium_fab_action_add_game">Create Game</string>
    <string name="activity_create_stadium_edt_address_hint">Stadium manual address</string>
    <string name="activity_create_stadium_btn_address">Stadium location on map</string>
    <string name="activity_create_stadium_btn_add_image">Add stadium photos</string>
    <string name="activity_create_stadium_edt_stadium_hint">Away Team Name</string>
    <string name="activity_splash_loading_message">Berim Basket</string>
    <string name="activity_intro_next_text">Next</string>
    <string name="activity_intro_start_text">Start</string>
    <string name="activity_set_marker_edt_location_hint">Stadium Name</string>
    <string name="activity_stadium_spec_phone">Phone</string>
    <string name="activity_stadium_spec_separator" translatable="false">:</string>
    <string name="activity_stadium_spec_address">Address</string>
    <string name="activity_stadium_spec_work_time">Work Time</string>
    <string name="activity_stadium_spec_telegram_channel">Telegram Channel</string>
    <string name="activity_stadium_spec_telegram_group">Telegram Group</string>
    <string name="activity_stadium_spec_instagram">Instagram</string>
    <string name="activity_stadium_spec_roof">Roof</string>
    <string name="activity_stadium_spec_distance_2_parking">Distance To Parking</string>
    <string name="activity_stadium_spec_rim_height">Rim Height</string>
    <string name="activity_stadium_spec_rim_number">Rim Number</string>
    <string name="activity_stadium_spec_spotlight">Spotlight</string>
    <string name="activity_stadium_spec_fence">Fence</string>
    <string name="activity_stadium_spec_parking">Parking</string>
    <string name="activity_stadium_spec_basket_net">Basket Net</string>
    <string name="activity_stadium_spec_score_line">Score Line</string>
    <string name="activity_stadium_spec_lines">Lines</string>
    <string name="activity_stadium_txt_phone_default">Phone : +98218943264</string>
    <string name="activity_stadium_txt_detail">Stadium Detail</string>
    <string name="activity_stadium_txt_spotlight_default">Spotlight: +</string>
    <string name="activity_stadium_txt_fence_default">Fence: +</string>
    <string name="activity_stadium_txt_parking_default">Parking: +</string>
    <string name="activity_stadium_txt_basket_net_default">Basket Net: +</string>
    <string name="activity_stadium_txt_score_line_default">Score Line: +</string>
    <string name="activity_stadium_btn_add_image">Add Image</string>
    <string name="activity_developer_contact_edt_mobile_hint">Mobile Number</string>
    <string name="activity_developer_contact_edt_subject_hint">Subject</string>
    <string name="activity_developer_contact_edt_content_hint">Message</string>
    <string name="activity_developer_contact_btn_send">Send</string>
    <string name="activity_developer_contact_txt_developer_name">Developer : Saber Tabatabaee</string>
    <string name="activity_developer_contact_btn_send_email">Send Message via email
    \n berimbasket@gmail.com</string>
    <string name="activity_developer_email_uri" translatable="false">berimbasket@gmail.com</string>
    <string name="activity_developer_contact_toast_message_fill_edittext">Please fill all fields</string>
    <string name="activity_developer_contact_toast_message_successful_send">Your message has been sent successfully</string>
    <string name="activity_developer_contact_toast_message_try_again">Please try again</string>
    <string name="activity_developer_contact_toast_message_webservice_fail">Try again later</string>
    <string name="activity_notification_toolbar_title">Notifications</string>
    <string name="activity_no_internet_connection_fail_text">Internet connection problem</string>
    <string name="activity_no_internet_try_again_button">Try again</string>
    <string name="activity_mobile_login_api_error">Error occurred please try again later</string>
    <string name="activity_mobile_login_phone_number_text">Phone number</string>
    <string name="activity_country_list_search">search</string>
    <string name="activity_donate_buy_me_a_coffee">Buy me a coffee</string>
    <string name="activity_donate_one_thousand_toman">1 thousand toman</string>
    <string name="activity_donate_two_thousands_toman">2 thousands toman</string>
    <string name="activity_donate_five_thousands_toman">5 thousands toman</string>
    <string name="activity_donate_ten_thousands_toman">10 thousands toman</string>
    <string name="activity_donate_button_pay">Donate</string>
    <string name="activity_donate_select_one_item_first">Please select one item first</string>
    <string name="activity_donate_payment_successful">Payment successful, Thank you for your donate</string>
    <string name="activity_donate_payment_failed">Payment failed!, please try again later</string>
    <string name="key_pref_update_notification" translatable="false">pref_update_notification</string>
    <string name="key_pref_message_notification" translatable="false">pref_message_notification</string>
    <string name="key_pref_help" translatable="false">pref_help</string>
    <string name="key_pref_terms_and_services" translatable="false">pref_terms_and_services</string>
    <string name="key_pref_change_log" translatable="false">pref_change_log</string>
    <string name="key_pref_about_us" translatable="false">pref_about_us</string>
    <string name="key_pref_state_list" translatable="false">pref_state_list</string>
    <string name="general_dismissible_start_header">We\'re at the starting point!</string>
    <string name="general_dismissible_start_message">If you have any idea to improve the app let us know please</string>
    <string name="general_dismissible_start_action">Send Feedback</string>
    <string name="general_dismissible_start_skip">Later</string>
    <string name="menu_fragment_profile_team">My Team</string>
    <string name="menu_fragment_profile_info">Complete Profile</string>
    <string name="menu_fragment_profile_change_pass">Change Password</string>
    <string name="menu_fragment_profile_logout">Logout</string>
    <string name="menu_fragment_profile_score">My Score</string>
</resources>