<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_profile_score"
        android:orderInCategory="1"
        android:title="@string/menu_fragment_profile_score" />

    <item
        android:id="@+id/menu_profile_team"
        android:orderInCategory="2"
        android:title="@string/menu_fragment_profile_team" />

    <item
        android:id="@+id/menu_profile_info"
        android:orderInCategory="3"
        android:title="@string/menu_fragment_profile_info" />

    <item
        android:id="@+id/menu_profile_change_pass"
        android:orderInCategory="4"
        android:title="@string/menu_fragment_profile_change_pass" />

    <item
        android:id="@+id/menu_profile_logout"
        android:orderInCategory="5"
        android:title="@string/menu_fragment_profile_logout" />

</menu>
