<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:orderInCategory="1"
        android:title="@string/activity_home_navigation_map" />

    <item
        android:id="@+id/navigation_stadium"
        android:icon="@drawable/location"
        android:orderInCategory="2"
        android:title="@string/activity_home_navigation_stadiums" />

    <item
        android:id="@+id/navigation_player"
        android:icon="@drawable/consultant"
        android:orderInCategory="3"
        android:title="@string/activity_home_navigation_players" />


    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/calendar"
        android:orderInCategory="4"
        android:title="@string/activity_home_navigation_matches" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_navigation_user"
        android:orderInCategory="5"
        android:title="@string/activity_home_navigation_profile" />

</menu>
