<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ir.berimbasket.app.view.preference.CustomPreferenceCategory android:title="تنظیمات اعلان">

        <ir.berimbasket.app.view.preference.CustomSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/key_pref_message_notification"
            android:summary="با فعالسازی این قسمت شما میتوانید از آخرین اخبار و پیشنهادا ویژه برنامه آگاه شوید"
            android:title="نمایش اعلان های برنامه" />

        <Preference android:layout="@layout/item_preference_divider" />

        <ir.berimbasket.app.view.preference.CustomSwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/key_pref_update_notification"
            android:summary="با فعالسازی این قسمت بروزرسانی های برنامه به شما اعلا داده میشود تا بتوانید از آخرین نسخه برنامه استفاده کنید"
            android:textColor="#ab6789"
            android:title="فعالسازی اعلان آپدیت برنامه" />

        <Preference android:layout="@layout/item_preference_space" />

    </ir.berimbasket.app.view.preference.CustomPreferenceCategory>

    <ir.berimbasket.app.view.preference.CustomPreferenceCategory android:title="تنظیمات شهر">

        <ir.berimbasket.app.view.preference.CustomListPreference
            android:defaultValue="0a0"
            android:entryValues="@array/pref_state_list_values"
            android:entries="@array/pref_state_list_names"
            android:key="@string/key_pref_state_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="انتخاب استان نمایش داده شده در نقشه" />
        <Preference android:layout="@layout/item_preference_divider" />

        <Preference android:layout="@layout/item_preference_space" />

    </ir.berimbasket.app.view.preference.CustomPreferenceCategory>

    <ir.berimbasket.app.view.preference.CustomPreferenceCategory android:title="پشتیبانی">

        <ir.berimbasket.app.view.preference.CustomPreference
            android:key="@string/key_pref_help"
            android:layout="@layout/item_preference_intent"
            android:title="راهنمای برنامه" />
        <Preference android:layout="@layout/item_preference_divider" />

        <ir.berimbasket.app.view.preference.CustomPreference
            android:key="@string/key_pref_terms_and_services"
            android:layout="@layout/item_preference_intent"
            android:title="شرایط استفاده" />
        <Preference android:layout="@layout/item_preference_divider" />

        <ir.berimbasket.app.view.preference.CustomPreference
            android:key="@string/key_pref_change_log"
            android:layout="@layout/item_preference_intent"
            android:title="تغییرات اخیر" />

        <Preference android:layout="@layout/item_preference_divider" />

        <ir.berimbasket.app.view.preference.CustomPreference
            android:key="@string/key_pref_about_us"
            android:layout="@layout/item_preference_intent"
            android:title="درباره ما">

        </ir.berimbasket.app.view.preference.CustomPreference>

    </ir.berimbasket.app.view.preference.CustomPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
