<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ir.berimbasket.app.activity.ActivityStadium"
    tools:ignore="RtlHardcoded"
    tools:showIn="@layout/activity_stadium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgStadiumLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/stadium1" />

            <TextView
                android:id="@+id/txtStadiumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgStadiumLogo"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:fontFamily="@font/yekan"
                android:text="@string/activity_stadium_txt_name_default"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <!--<RatingBar-->
                <!--android:id="@+id/ratingStadiumRate"-->
                <!--style="?android:attr/ratingBarStyleSmall"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="6dp"-->
                <!--android:layout_toLeftOf="@id/imgStadiumLogo"-->
                <!--android:isIndicator="false"-->
                <!--android:max="5"-->
                <!--android:numStars="5"-->
                <!--android:progress="4"-->
                <!--android:progressTint="@color/colorGold"-->
                <!--android:visibility="gone" />-->
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/txtStadiumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCompleteStadiumDetail"
                    style="@style/BrandButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/yekan"
                    android:text="@string/activity_stadium_btn_complete_detail" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnAddImage"
                    style="@style/BrandButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yekan"
                    android:text="@string/activity_stadium_btn_add_image" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorLightGrey" />

        <RelativeLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="150dp">

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorLightGrey" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerStadiumGallery"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:clipToPadding="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorLightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtDetailSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:text="@string/activity_stadium_txt_detail"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtStadiumTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_phone_default" />

            <TextView
                android:id="@+id/txtStadiumAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_address_default" />

            <TextView
                android:id="@+id/txtStadiumRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_round_default" />

            <TextView
                android:id="@+id/txtTelegramChannel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_telegram_channel_default" />

            <TextView
                android:id="@+id/txtInstagramId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_instagram_default" />

            <TextView
                android:id="@+id/txtRoof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_root_default" />

            <TextView
                android:id="@+id/txtDistance2Parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_distance_2_parking_default" />

            <TextView
                android:id="@+id/txtRimHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_rim_height" />

            <TextView
                android:id="@+id/txtRimNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_rim_number_default" />

            <TextView
                android:id="@+id/txtSpotlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_spotlight_default" />

            <TextView
                android:id="@+id/txtFence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_fence_default" />

            <TextView
                android:id="@+id/txtParking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_parking_default" />

            <TextView
                android:id="@+id/txtBasketNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_basket_net_default" />

            <TextView
                android:id="@+id/txtScoreLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_score_line_default" />

            <TextView
                android:id="@+id/txtLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:padding="10dp"
                android:text="@string/activity_stadium_txt_lines_default" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>


