<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDismissibleHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yekan"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/general_dismissible_start_header" />

    <TextView
        android:id="@+id/txtDismissibleMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yekan"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDismissibleHeader"
        tools:text="@string/general_dismissible_start_message" />

    <TextView
        android:id="@+id/txtDismissibleAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yekan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDismissibleMessage"
        tools:text="@string/general_dismissible_start_action" />

    <TextView
        android:id="@+id/txtDismissibleSkip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yekan"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDismissibleAction"
        app:layout_constraintStart_toEndOf="@+id/txtDismissibleAction"
        tools:text="@string/general_dismissible_start_skip" />

</android.support.constraint.ConstraintLayout>