<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/yekan"
            android:text="@string/activity_developer_contact_txt_developer_name"
            android:textColor="@color/colorBlack" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:hint="@string/activity_developer_contact_edt_mobile_hint"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="start">

            <EditText
                android:id="@+id/edtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan"
                android:gravity="start"
                android:hint="@string/activity_developer_contact_edt_subject_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="start">

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/yekan"
                android:gravity="start"
                android:hint="@string/activity_developer_contact_edt_content_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="5" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSendMessage"
            style="@style/BrandButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/yekan"
            android:text="@string/activity_developer_contact_btn_send"
            android:textStyle="bold"
            android:theme="@style/BrandButtonStyle" />

        <TextView
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/yekan"
            android:gravity="center"
            android:text="@string/activity_developer_contact_btn_send_email"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</ScrollView>
